--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "weather-forecast": {
+    "forecaster": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/weather-forecast",
+            "outputPath": "dist/forecaster",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "weather-forecast:build"
+            "browserTarget": "forecaster:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "weather-forecast:build:production"
+              "browserTarget": "forecaster:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "weather-forecast:build"
+            "browserTarget": "forecaster:build"
           }
         },
         "test": {
@@ -116,16 +116,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "weather-forecast:serve"
+            "devServerTarget": "forecaster:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "weather-forecast:serve:production"
+              "devServerTarget": "forecaster:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "weather-forecast"
+  "defaultProject": "forecaster"
 }
